Openshift_Microservice_Template/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: app-listener-test #app-name
  name: app-listener-test #app-name
  namespace: app-listener #project-name
spec:
  ports:
    - name: 9006-tcp
      port: 9006
      protocol: TCP
      targetPort: 9006
  selector:
    deploymentconfig: app-listener-test #app-name
  sessionAffinity: None
  type: ClusterIP # Use routes to expose this via URL
